# SollyBird

./: README.md
Anchor/: Anchor.toml  README.md  README.md.txt  package-lock.json  package.json
Anchor/programs/solly-bird-2/: Cargo.toml
Anchor/programs/solly-bird-2/src/: lib.rs
Anchor/tests/: solly-bird-2.ts
anchor/idl/: solly_bird_2.json
anchor/programs/solly-bird-2/: Cargo.toml
anchor/programs/solly-bird-2/src/: lib.rs
anchor/tests/: solly-bird-2.ts
front/: CHANGELOG.md  README.md  config-overrides.js  package-lock.json  package.json  tsconfig.json
front/public/: game.js  index.html
front/src/: App.tsx  Game.tsx  index.tsx  solly_bird_2.json  solly_bird_2.ts
front/src/components/HomePage/: homepage.css  index.tsx
front/src/css/: game.css
